// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Subscriptions /> Renders correctly in various states renders with no active subscriptions 1`] = `
<section>
  <h2>
    Subscriptions
  </h2>
  <div
    class="section flex-md-row align-items-start align-items-md-center justify-content-between"
  >
    <span
      class="text-dark-900"
    >
      You do not have an active subscription. To view your past receipts, click 
      <i>
        Manage my subscriptions
      </i>
      .
    </span>
    <button
      aria-disabled="false"
      aria-live="assertive"
      class="pgn__stateful-btn pgn__stateful-btn-state-default text-nowrap btn btn-primary btn-sm"
      type="button"
    >
      <span
        class="d-flex align-items-center justify-content-center"
      >
        <span>
          Manage my subscriptions
        </span>
      </span>
      <span
        class="pgn__icon pgn__icon__sm btn-icon-after"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V5h7V3H3v18h18v-9h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="section section-gap-lg"
  >
    <a
      class="pgn__hyperlink default-link standalone-link"
      href="http://localhost:18000/dashboard/programs/a87e5eac-3c93-45a1-a8e1-4c79ca8401c8"
      target="_self"
    >
      <div
        class="bg-light-200 p-3 pgn__card pgn__card-light card"
        tabindex="-1"
      >
        <div
          class="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
        >
          <h3
            class="text-info-500 m-0"
          >
            Blockchain Fundamentals
          </h3>
          <span
            class="text-capitalize badge badge-light"
          >
            Inactive
          </span>
        </div>
        <p
          class="small text-gray-500 m-0"
        >
          University of California, Berkeley
        </p>
      </div>
    </a>
    <a
      class="pgn__hyperlink default-link standalone-link"
      href="http://localhost:18000/dashboard/programs/0c6e5fa2-96e8-40b2-9ebe-c8b0df2a3b22"
      target="_self"
    >
      <div
        class="bg-light-200 p-3 pgn__card pgn__card-light card"
        tabindex="-1"
      >
        <div
          class="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
        >
          <h3
            class="text-info-500 m-0"
          >
            Critical Thinking
          </h3>
          <span
            class="text-capitalize badge badge-light"
          >
            Inactive
          </span>
        </div>
        <p
          class="small text-gray-500 m-0"
        >
          Simmons University
        </p>
      </div>
    </a>
  </div>
</section>
`;

exports[`<Subscriptions /> Renders correctly in various states renders with no subscriptions 1`] = `
<section>
  <h2>
    Subscriptions
  </h2>
  <span
    class="text-dark-900"
  >
    You do not have any active or previous subscriptions.
  </span>
  <div
    class="fade alert-content bg-light-200 alert show"
    role="alert"
  >
    <div
      class="pgn__alert-message-wrapper"
    >
      <div
        class="alert-message-content"
      >
        <h4
          class="section section-gap-sm flex-sm-row align-items-start alert-heading"
        >
          <span
            class="badge badge-warning"
          >
            New
          </span>
          Monthly program subscriptions 
          —
           more flexible, more affordable
        </h4>
        <p>
          Now available for many popular programs, affordable monthly subscription pricing can help you manage your budget more effectively. Subscriptions start at $39/month USD per program, after a 7-day full access free trial. Cancel at any time.
        </p>
      </div>
      <div
        class="pgn__alert-actions pgn__action-row"
      >
        <span
          class="pgn__action-row-spacer"
        />
        <a
          class="text-nowrap btn btn-primary btn-sm"
          href="http://localhost:18000/program-subscriptions"
        >
          Explore subscription options
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<Subscriptions /> Renders correctly in various states renders with subscriptions 1`] = `
<section>
  <h2>
    Subscriptions
  </h2>
  <div
    class="section flex-md-row align-items-start align-items-md-center justify-content-between"
  >
    <span
      class="text-dark-900"
    >
      You have 2 active subscriptions. To view your receipts, change your payment method or cancel your subscription, click 
      <i>
        Manage my subscriptions
      </i>
      .
    </span>
    <button
      aria-disabled="false"
      aria-live="assertive"
      class="pgn__stateful-btn pgn__stateful-btn-state-default text-nowrap btn btn-primary btn-sm"
      type="button"
    >
      <span
        class="d-flex align-items-center justify-content-center"
      >
        <span>
          Manage my subscriptions
        </span>
      </span>
      <span
        class="pgn__icon pgn__icon__sm btn-icon-after"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V5h7V3H3v18h18v-9h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="section section-gap-lg"
  >
    <a
      class="pgn__hyperlink default-link standalone-link"
      href="http://localhost:18000/dashboard/programs/a87e5eac-3c93-45a1-a8e1-4c79ca8401c8"
      target="_self"
    >
      <div
        class="bg-light-200 p-3 pgn__card pgn__card-light card"
        tabindex="-1"
      >
        <div
          class="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
        >
          <h3
            class="text-info-500 m-0"
          >
            Blockchain Fundamentals
          </h3>
          <span
            class="text-capitalize badge badge-warning"
          >
            Trial
          </span>
        </div>
        <p
          class="small text-gray-500 m-0"
        >
          University of California, Berkeley
        </p>
      </div>
    </a>
    <a
      class="pgn__hyperlink default-link standalone-link"
      href="http://localhost:18000/dashboard/programs/0c6e5fa2-96e8-40b2-9ebe-c8b0df2a3b22"
      target="_self"
    >
      <div
        class="bg-light-200 p-3 pgn__card pgn__card-light card"
        tabindex="-1"
      >
        <div
          class="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
        >
          <h3
            class="text-info-500 m-0"
          >
            Critical Thinking
          </h3>
          <span
            class="text-capitalize badge badge-success"
          >
            Active
          </span>
        </div>
        <p
          class="small text-gray-500 m-0"
        >
          Simmons University
        </p>
      </div>
    </a>
    <a
      class="pgn__hyperlink default-link standalone-link"
      href="http://localhost:18000/dashboard/programs/a87e5eac-3c93-45a1-a8e1-4c79ca8401c8"
      target="_self"
    >
      <div
        class="bg-light-200 p-3 pgn__card pgn__card-light card"
        tabindex="-1"
      >
        <div
          class="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
        >
          <h3
            class="text-info-500 m-0"
          >
            Blockchain Fundamentals
          </h3>
          <span
            class="text-capitalize badge badge-light"
          >
            Inactive
          </span>
        </div>
        <p
          class="small text-gray-500 m-0"
        >
          University of California, Berkeley
        </p>
      </div>
    </a>
    <a
      class="pgn__hyperlink default-link standalone-link"
      href="http://localhost:18000/dashboard/programs/0c6e5fa2-96e8-40b2-9ebe-c8b0df2a3b22"
      target="_self"
    >
      <div
        class="bg-light-200 p-3 pgn__card pgn__card-light card"
        tabindex="-1"
      >
        <div
          class="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
        >
          <h3
            class="text-info-500 m-0"
          >
            Critical Thinking
          </h3>
          <span
            class="text-capitalize badge badge-light"
          >
            Inactive
          </span>
        </div>
        <p
          class="small text-gray-500 m-0"
        >
          Simmons University
        </p>
      </div>
    </a>
  </div>
</section>
`;
